@@ -24,7 +24,6 @@ my %WriteMakefileArgs = (
     "Exporter" => 0,
     "MRO::Compat" => 0,
     "Module::Load" => 0,
-    "Package::Stash" => 0,
     "Scalar::Util" => 0,
     "Term::ANSIColor" => "3.00",
     "constant" => "1.03",
@@ -55,7 +54,6 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "MRO::Compat" => 0,
   "Module::Load" => 0,
-  "Package::Stash" => 0,
   "Scalar::Util" => 0,
   "Term::ANSIColor" => "3.00",
   "Test::Builder" => 0,
