@@ -8,6 +8,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - B
  - Test::Differences
 
+ [Removed / runtime requires]
+ - Package::Stash
+
 0.002001 2016-05-19T14:07:12Z
 
 0.002000 2016-05-19T12:30:00Z
